<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?attr/colorSurface"
    tools:context=".GameActivity">

    <!-- Score -->
    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_format"
        android:textSize="20sp"
        android:textColor="?attr/colorOnSurface"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <!-- Question -->
    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_format"
        android:textSize="24sp"
        android:textColor="?attr/colorOnSurface"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <!-- Image -->
    <ImageView
        android:id="@+id/characterImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/character_image_desc"/>

    <!-- Options -->
    <RadioGroup
        android:id="@+id/optionsGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"/>

    <!-- Navigation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginEnd="10dp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary"
            android:padding="10dp"/>
    </LinearLayout>
</LinearLayout>